--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,24 @@
 {
-    "name": "angular-wistia",
-    "version": "0.0.1",
-    "main": "index.html",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components"
-    ],
-    "dependencies": {
-        "jquery": "~2.0",
-        "underscore": "~1.5",
-        "bootstrap": "~3.1",
-        "angular": "~1.2",
-        "angular-route": "~1.2",
-        "angular-animate": "~1.2",
-        "angular-resource": "~1.2",
-        "angular-cookies": "~1.2",
-        "angular-mocks": "~1.2",
-        "angular-ui-utils": "~0.1",
-        "angular-bootstrap": "~0.10",
-        "moment": "~2.5",
-        "less.js": "~1.6",
-        "font-awesome": "~4.0"
-    }
+  "name": "angular-wistia",
+  "version": "0.0.1",
+  "main": "index.html",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components"
+  ],
+  "dependencies": {
+    "jquery": "~2",
+    "lodash": "~3",
+    "bootstrap": "~3",
+    "angular": "~1",
+    "angular-route": "~1",
+    "angular-resource": "~1",
+    "angular-mocks": "~1",
+    "angular-bootstrap": "~0.14",
+    "less.js": "~1.6",
+    "font-awesome": "~4.4",
+    "blueimp-file-upload": "jquery-file-upload#~9.11",
+    "videogular": "videogular-core#~1.3"
+  }
 }
