--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,6 @@
     "angular-bootstrap": "~0.14",
     "less.js": "~1.6",
     "font-awesome": "~4.4",
-    "blueimp-file-upload": "jquery-file-upload#~9.11",
-    "videogular": "videogular-core#~1.3"
+    "blueimp-file-upload": "jquery-file-upload#~9.11"
   }
 }
