--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-    "name": "angular-wistia",
-    "version": "0.0.1-pre-release",
-    "description": "Angular-Wistia angular directives and services for Wistia video service",
-    "keywords": "client-side, browser, material, material-design, design, angular, wistia, css",
-    "homepage": "https://github.com/basghar/angular-wistia",
-    "bugs": "https://github.com/basghar/angular-wistia/issues",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/basghar/angular-wistia.git"
-    },
-    "devDependencies": {
-        "grunt": "~0.4",
-        "grunt-angular-templates": "~0.5",
-        "grunt-browser-output": "0.1.0",
-        "grunt-contrib-clean": "~0.5",
-        "grunt-contrib-concat": "~0.3",
-        "grunt-contrib-connect": "~0.6",
-        "grunt-contrib-copy": "~0.5",
-        "grunt-contrib-cssmin": "~0.7",
-        "grunt-contrib-htmlmin": "~0.1",
-        "grunt-contrib-jshint": "~0.9",
-        "grunt-contrib-less": "~0.8",
-        "grunt-contrib-uglify": "~0.2",
-        "grunt-contrib-watch": "~0.6",
-        "grunt-dom-munger": "~3.4",
-        "grunt-karma": "~0.8.3",
-        "grunt-ng-annotate": "^1.0.1",
-        "karma": "~0.12.6",
-        "karma-chrome-launcher": "~0.1.3",
-        "karma-firefox-launcher": "~0.1.3",
-        "karma-jasmine": "~0.3.6",
-        "karma-mocha-reporter": "~0.2.5",
-        "karma-ng-html2js-preprocessor": "^0.2.0",
-        "karma-phantomjs-launcher": "~0.1.4",
-        "load-grunt-tasks": "~0.2"
-    }
+  "name": "angular-wistia",
+  "version": "0.0.1-pre-release",
+  "description": "Angular-Wistia angular directives and services for Wistia video service",
+  "keywords": "client-side, browser, material, material-design, design, angular, wistia, css",
+  "homepage": "https://github.com/basghar/angular-wistia",
+  "bugs": "https://github.com/basghar/angular-wistia/issues",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/basghar/angular-wistia.git"
+  },
+  "devDependencies": {
+    "grunt": "~0.4",
+    "grunt-angular-templates": "~0.5",
+    "grunt-browser-output": "0.1.0",
+    "grunt-contrib-clean": "~0.5",
+    "grunt-contrib-concat": "~0.3",
+    "grunt-contrib-connect": "~0.6",
+    "grunt-contrib-copy": "~0.5",
+    "grunt-contrib-cssmin": "~0.7",
+    "grunt-contrib-htmlmin": "~0.1",
+    "grunt-contrib-jshint": "~0.9",
+    "grunt-contrib-less": "~0.8",
+    "grunt-contrib-uglify": "~0.2",
+    "grunt-contrib-watch": "~0.6",
+    "grunt-dom-munger": "~3.4",
+    "grunt-karma": "~0.8.3",
+    "grunt-ng-annotate": "^1.0.1",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "karma": "~0.12.6",
+    "karma-chrome-launcher": "~0.1.3",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-jasmine": "~0.3.6",
+    "karma-mocha-reporter": "~0.2.5",
+    "karma-ng-html2js-preprocessor": "^0.2.0",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "load-grunt-tasks": "~0.2"
+  }
 }
